# gtd-rust-taskwarrior

./: Cargo.toml  README.md  TODO  projects.json
doc/: STORAGE_FORMAT.md
hooks/: on-add.gtd.py  on-add.py  on-modify.gtd.py  on-modify.py
schema/: task.jsonc
src/: config.rs  main.rs  parser.rs  project.rs  table.rs
