[package]
name = "gtd"
description = "A CLI helper to ease using GTD projects with Taskwarrior"
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "3.0", features = ["derive"] }
confy = { version = "0.4.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"