[package]
name = "proj"
description = "A CLI helper to ease using GTD projects with Taskwarrior"
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.29", features = ["derive"] }
confy = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
comfy-table = "7.1.4"


[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[dev-dependencies]
tempfile = "3.17.1"
